--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Iceberg', cursive;
+	font-family: 'Press Start 2P', cursive;
 }
 html{
 	scroll-behavior: smooth;
