--- a/css/style.css
+++ b/css/style.css
@@ -265,17 +265,21 @@ header{
   }
 		
 .left_area h3{
-	color: #fff;
-	margin: 0;
-	text-transform: uppercase;
-	font-size: 22px;
-	font-weight: 900;
+    color: #fff;
+    margin: 0;
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: 900;
+    padding: 27px;
   }
   
-  .left_area span{
-	color: #19B3D3;
-  }
-
+.left_area img{
+	width: 77px;
+    height: auto;
+}
+.left_area{
+	display: flex;
+}
 footer{
 	text-align: center;
 }
@@ -373,6 +377,29 @@ footer{
 	padding: 10px;
 	border-radius: 4px;
 }
+.img-slider .slide .background {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	filter: blur(10px); /* Adjust the value to control the blur effect */
+	z-index: -999;
+  }
+  
+  .img-slider .slide .background img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: inherit;
+	pointer-events: none;
+	z-index: -999;
+  }
+  
+  
 .img-slider .navigation{
 	z-index: 2;
 	position: absolute;
@@ -395,9 +422,10 @@ footer{
 }
 
 .slideshow{
-	height: 70vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #1D212B;
+    padding-bottom: 10px;
 }
