--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Press Start 2P', cursive;
+	font-family: 'VT323', monospace;
 }
 html{
 	scroll-behavior: smooth;
@@ -19,8 +19,10 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
 header{
 	z-index: 999;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -285,11 +287,13 @@ footer{
 }
 
 .section-title{
-	position: relative;
-	color: #3a6cf4;
-	font-size: 2.2em;
-	font-weight: 800;
-	margin-bottom: 60px;
+    position: relative;
+    color: #3a6cf4;
+    font-size: 2.2em;
+    font-weight: 800;
+    margin-bottom: 60px;
+    text-align: center;
+    margin-top: 47px;
   }
   
   .section-title:before{
@@ -428,4 +432,208 @@ footer{
     align-items: center;
     background: #1D212B;
     padding-bottom: 10px;
+	margin-top: 79px;
 }
+
+.container{
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: auto;
+  }
+  
+  /*Styles for product card*/
+  
+  .product .product-card{
+    z-index: 1;
+    background: #0b0832;
+    position: relative;
+    width: 300px;
+    height: 400px;
+    margin: 40px;
+    border-radius: 10px;
+  }
+  
+  .product .product-card:before{
+	content: '';
+	background: rgba(255, 255, 255, 0.1);
+	position: absolute;
+	display: block;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+  }
+  
+  .product .product-card .product-img{
+	z-index: 1;
+	position: absolute;
+	max-width: 350px;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }
+  
+  .product .product-card .name{
+	z-index: 2;
+	color: #fff;
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	bottom: 130px;
+	font-size: 20px;
+	letter-spacing: 1px;
+  }
+  
+  .product .product-card .price{
+	z-index: 2;
+	color: #fff;
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	bottom: 80px;
+	font-size: 30px;
+	font-weight: 300;
+  }
+  
+  .product .product-card .popup-btn{
+	z-index: 2;
+	color: #fff;
+	background: #555;
+	position: absolute;
+	bottom: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	font-size: 14px;
+	text-transform: uppercase;
+	text-decoration: none;
+	letter-spacing: 1px;
+	padding: 10px 15px;
+	border-radius: 20px;
+	cursor: pointer;
+  }
+  
+  /*Styles for popup view*/
+  
+  .product .popup-view{
+	z-index: 2;
+	background: rgba(255, 255, 255, 0.5);
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	visibility: hidden;
+	transition: 0.5s;
+  }
+  
+  .product .popup-view.active{
+	opacity: 1;
+	visibility: visible;
+  }
+  
+  .product .popup-card{
+	position: relative;
+	display: flex;
+	width: 800px;
+	height: 500px;
+	margin: 20px;
+  }
+  
+  .product .popup-card .product-img{
+	z-index: 2;
+	background: #1D212B;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 45%;
+	height: 90%;
+	transform: translateY(25px);
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+  }
+  
+  .product .popup-card .product-img img{
+	z-index: 2;
+	position: relative;
+	width: 450px;
+	left: -50px;
+  }
+  
+  .product .popup-card .info{
+	z-index: 2;
+	background: #fff;
+	display: flex;
+	flex-direction: column;
+	width: 55%;
+	height: 100%;
+	box-sizing: border-box;
+	padding: 40px;
+	border-radius: 10px;
+  }
+  
+  .product .popup-card .close-btn{
+	color: #555;
+	z-index: 3;
+	position: absolute;
+	right: 0;
+	font-size: 20px;
+	margin: 20px;
+	cursor: pointer;
+  }
+  
+  .product .popup-card .info h2{
+	font-size: 40px;
+	line-height: 20px;
+	margin: 10px;
+  }
+  
+  .product .popup-card .info h2 span{
+	font-size: 15px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+  }
+  
+  .product .popup-card .info p{
+	font-size: 15px;
+	margin: 10px;
+  }
+  
+  .product .popup-card .info .price{
+	font-size: 45px;
+	font-weight: 300;
+	margin: 10px;
+  }
+  
+  .product .popup-card .info .add-cart-btn{
+	color: #fff;
+	background: #009DD2;
+	font-size: 16px;
+	font-weight: 600;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	margin: 10px auto;
+	padding: 10px 50px;
+	border-radius: 20px;
+  }
+  
+  .product .popup-card .info .add-wish{
+	color: #009DD2;
+	font-size: 16px;
+	text-align: center;
+	font-weight: 600;
+	text-transform: uppercase;
+  }
+  
+  
