--- a/css/style.css
+++ b/css/style.css
@@ -234,18 +234,20 @@ header{
 	  margin-left: 20px;
 	}
   
-	.close-btn{
-	  position: absolute;
-	  background: url(close.png)no-repeat;
-	  width: 40px;
-	  height: 40px;
-	  background-size: 25px;
-	  background-position: center;
-	  top: 0;
-	  left: 0;
-	  margin: 25px;
-	  cursor: pointer;
-	}
+	.close-btnzz {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		font-size: 20px;
+		color: #fff;
+		cursor: pointer;
+	  }
+	  
+	  .close-btnzz:hover {
+		color: #ff0000; /* Change the color on hover if desired */
+	  }
+	  
+	  
   
 	.menu-btn{
 	  background: url(menu.png)no-repeat;
@@ -412,7 +414,7 @@ footer{
 	left: 50%;
 	transform: translateX(-50%);
 }
-.img-slider .navigation .button{
+.img-slider .navigation .buttonzz{
 	background: rgba(255, 255, 255, 0.5);
 	width: 12px;
 	height: 12px;
@@ -420,7 +422,7 @@ footer{
 	border-radius: 50%;
 	cursor: pointer;
 }
-.img-slider .navigation .button.active{
+.img-slider .navigation .buttonzz.active{
 	background: #2696E9;
 	box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
@@ -502,7 +504,7 @@ footer{
   .product .product-card .popup-btn{
 	z-index: 2;
 	color: #fff;
-	background: #555;
+	background: #555; 
 	position: absolute;
 	bottom: 20px;
 	left: 50%;
@@ -514,6 +516,10 @@ footer{
 	padding: 10px 15px;
 	border-radius: 20px;
 	cursor: pointer;
+  }
+  .product .product-card .popup-btn:hover{
+	background: #2d2d2d;
+	transition: 0.3s ease-in-out;
   }
   
   .product .popup-view{
@@ -611,7 +617,7 @@ footer{
 	margin: 10px;
   }
   
-  .product .popup-card .info .add-cart-btn{
+  .product .popup-card .info #add-cart-btn{
 	color: #fff;
 	background: #009DD2;
 	font-size: 16px;
@@ -622,6 +628,10 @@ footer{
 	margin: 10px auto;
 	padding: 10px 50px;
 	border-radius: 20px;
+  }
+  .product .popup-card .info #add-cart-btn:hover{
+	background-color: #24419a;
+	transition: 0.3s ease-in-out;
   }
   
   .product .popup-card .info .add-wish{
@@ -681,23 +691,40 @@ footer{
     transition: transform .3s ease-out,-webkit-transform .3s ease-out,-o-transform .3s ease-out;
 }
 .modal-content {
-    position: relative;
+    position: fixed;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #999;
     border: 1px solid rgba(0,0,0,.2);
     border-radius: 6px;
-    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
     box-shadow: 0 3px 9px rgba(0,0,0,.5);
     outline: 0;
+    height: auto;
+    width: 70%;
+    margin-left: 210px;
+    margin-top: 95px;
 }
 .modal-header {
-    padding: 15px;
+	padding-top: 28px;
+    padding-left: 17px;
+    padding-bottom: 20px;
     border-bottom: 1px solid #e5e5e5;
+}
+.modal-footer{
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #e5e5e5;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+    align-items: center
 }
 .modal-body {
     position: relative;
     padding: 15px;
+}
+.modal-title{
+	font-size: 30px;
 }
 .table {
     width: 100%;
@@ -722,10 +749,661 @@ table {
 	color: black;
 }
 .cart-btn button{
-	background-color: red;
+	background-color: lightgrey;
 	border: none;
 	cursor: pointer;
 	margin: 10px;
 	padding: 10px;
 	font-weight: 100;
+}
+.cart-btn button:hover {
+	transition: 0.3s ease-in-out;
+	background: lightgreen;
+
+  }
+.btn-danger{
+	background-color: cyan;
+}
+#clearcart:hover{
+	transition: 0.3s ease-in-out;
+	background-color: rgb(181, 21, 21);
+}
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 20px;
+    border-radius: 4px;
+    user-select: none;
+}
+.table {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+table {
+    background-color: transparent;
+	border-collapse: collapse;
+    border-spacing: 0;
+	display: table;
+    border-collapse: separate;
+    box-sizing: border-box;
+    text-indent: initial;
+    border-spacing: 2px;
+    border-color: gray;
+}
+.close:focus, .close:hover {
+    color:rgb(181, 21, 21);
+    text-decoration: none;
+    cursor: pointer;
+    filter: alpha(opacity=50);
+    opacity: .5;
+}
+button.close {
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.close {
+    float: right;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .2;
+    margin-right: 19px;
+    margin-top: -26px;
+}
+tr{
+	font-size: 20px;
+}
+.form-control {
+    display: block;
+    width: 50%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 20px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.btn-secondary:hover{
+background-color: rgb(181, 21, 21);
+color: white;
+transition: 0.3s ease-in-out;
+}
+#closeButton {
+	pointer-events: none;
+  }
+  
+  .button {
+	display: inline-block;
+	min-width: 150px;
+	margin: 20px auto;
+	background: #8BC34A;
+	color: #fefefe;
+	font-size: 1.2em;
+	padding: 1em;
+	border-radius: 4px;
+	text-align: center;
+	position: relative;
+	cursor: pointer;
+	appearance: none;
+	-webkit-appearance: none;
+	border: 0;
+	transition: border-radius linear 0.05s, width linear 0.05s;
+  }
+  
+  .button:focus {
+	outline: 0;
+  }
+  
+  .button.animate {
+	width: 68.1818181818px;
+	height: 68.1818181818px;
+	min-width: 0;
+	border-radius: 50%;
+	color: transparent;
+  }
+  
+  .button.animate:after {
+	position: absolute;
+	content: '';
+	width: 11.3636363636px;
+	height: 11.3636363636px;
+	border: 4px solid #fefefe;
+	border-radius: 50%;
+	border-left-color: transparent;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	animation: spin ease-in 2.5s forwards;
+	animation-name: spin;
+	-webkit-animation-name: spin;
+	transition-timing-function: ease-in-out;
+	-webkit-transition-timing-function: ease-in-out;
+	animation-duration: 2.5s;
+	-webkit-animation-duration: 2.5s;
+	animation-fill-mode: forwards;
+	-webkit-animation-fill-mode: forwards;
+  }
+  
+  .button.animate.success:before {
+	position: absolute;
+	content: '';
+	width: 11.3636363636px;
+	height: 5.6818181818px;
+	border: 4px solid #fefefe;
+	border-right: 0;
+	border-top: 0;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%) rotate(0deg) scale(0);
+	transform: translate(-50%, -50%) rotate(0deg) scale(0);
+	-webkit-animation: success ease-in 0.15s forwards;
+	animation: success ease-in 0.15s forwards;
+	animation-delay: 2.5s;
+  }
+  
+  .button.animate.error {
+	position: relative;
+	-webkit-animation: vibrate ease-in 0.5s forwards;
+	animation: vibrate ease-in 0.5s forwards;
+	-webkit-animation-delay: 2.5s;
+	animation-delay: 2.5s;
+  }
+  
+  .button.animate.error:before {
+	color: #fff;
+	position: absolute;
+	content: '!';
+	font-size: 1.8rem;
+	font-weight: bold;
+	text-align: center;
+	left: 50%;
+	top: 50%;
+	-webkit-transform: translate(-50%, -50%) scale(0);
+	transform: translate(-50%, -50%) scale(0);
+	-webkit-animation: error ease-in 0.5s forwards;
+	animation: error ease-in 0.5s forwards;
+	animation-delay: 2.5s;
+  }
+  
+  @keyframes spin {
+	0% {
+	  transform: translate(-50%, -50%) rotate(0deg) scale(1);
+	}
+	90% {
+	  transform: translate(-50%, -50%) rotate(1080deg) scale(1);
+	}
+	100% {
+	  transform: scale(0);
+	}
+  }
+  
+  @-webkit-keyframes spin {
+	0% {
+	  -webkit-transform: translate(-50%, -50%) rotate(0deg) scale(1);
+	}
+	98% {
+	  -webkit-transform: translate(-50%, -50%) rotate(1080deg) scale(1);
+	}
+	100% {
+	  -webkit-transform: translate(-50%, -50%) rotate(1080deg) scale(0);
+	}
+  }
+  
+  @keyframes success {
+	from {
+	  transform: translate(-50%, -50%) rotate(0) scale(0);
+	}
+	to {
+	  transform: translate(-50%, -50%) rotate(-45deg) scale(1);
+	}
+  }
+  
+  @-webkit-keyframes success {
+	from {
+	  -webkit-transform: translate(-50%, -50%) rotate(0) scale(0);
+	}
+	to {
+	  -webkit-transform: translate(-50%, -50%) rotate(-45deg) scale(1);
+	}
+  }
+  
+  @keyframes error {
+	from {
+	  transform: translate(-50%, -50%) scale(0);
+	}
+	to {
+	  transform: translate(-50%, -50%) scale(1);
+	  background-color: #f44336;
+	}
+  }
+  
+  @-webkit-keyframes error {
+	from {
+	  -webkit-transform: translate(-50%, -50%) scale(0);
+	}
+	to {
+	  -webkit-transform: translate(-50%, -50%) scale(1);
+	  background-color: #f44336;
+	}
+  }
+  
+  @keyframes vibrate {
+	0%, 30%, 60%, 85%, 100% {
+	  left: 0;
+	  background-color: #f44336;
+	}
+	 10%, 40%, 90%, 70% {
+	  left: -2px;
+	  background-color: #f44336;
+	}
+	 20%, 50%, 80%, 95% {
+	  left: 2px;
+	  background-color: #f44336;
+	}
+  }
+
+  :root {
+	--omrs-color-ink-lowest-contrast: rgba(47, 60, 85, 0.18);
+	--omrs-color-ink-low-contrast: rgba(60, 60, 67, 0.3);
+	--omrs-color-ink-medium-contrast: rgba(19, 19, 21, 0.6);
+	--omrs-color-interaction: #1e4bd1;
+	--omrs-color-interaction-minus-two: rgba(73, 133, 224, 0.12);
+	--omrs-color-danger: #b50706;
+	--omrs-color-bg-low-contrast: #eff1f2;
+	--omrs-color-ink-high-contrast: #121212;
+	--omrs-color-bg-high-contrast: #ffffff;
+	
+}
+.omrs-input-underlined > input,
+.omrs-input-filled > input {
+	border: none;
+	border-bottom: 0.125rem solid var(--omrs-color-ink-medium-contrast);
+	width: 100%;
+	height: 2rem;
+	font-size: 1.0625rem;
+	padding-left: 0.875rem;
+	line-height: 147.6%;
+	padding-top: 0.825rem;
+	padding-bottom: 0.5rem;
+}
+
+.omrs-input-underlined > input:focus,
+.omrs-input-filled > input:focus {
+	outline: none;
+}
+
+.omrs-input-underlined > .omrs-input-label,
+.omrs-input-filled > .omrs-input-label {
+	top: 0.9375rem;
+	left: 0.875rem;
+	line-height: 147.6%;
+	color: var(--omrs-color-ink-medium-contrast);
+	transition: top .2s;
+}
+
+.omrs-input-underlined > svg,
+.omrs-input-filled > svg {
+	position: absolute;
+	top: 0.9375rem;
+	right: 0.875rem;
+	fill: var(--omrs-color-ink-medium-contrast);
+}
+
+.omrs-input-underlined > .omrs-input-helper,
+.omrs-input-filled > .omrs-input-helper {
+	font-size: 0.9375rem;
+	color: var(--omrs-color-ink-medium-contrast);
+	letter-spacing: 0.0275rem;
+	margin: 0.125rem 0.875rem;
+}
+
+.omrs-input-underlined > input:hover,
+.omrs-input-filled > input:hover {
+	background: var(--omrs-color-interaction-minus-two);
+	border-color: var(--omrs-color-ink-high-contrast);
+}
+
+.omrs-input-underlined > input:focus + .omrs-input-label,
+.omrs-input-underlined > input:valid + .omrs-input-label,
+.omrs-input-filled > input:focus + .omrs-input-label,
+.omrs-input-filled > input:valid + .omrs-input-label {
+	top: 0;
+	font-size: 0.9375rem;
+	margin-bottom: 32px;;
+}
+
+.omrs-input-underlined:not(.omrs-input-danger) > input:focus + .omrs-input-label,
+.omrs-input-filled:not(.omrs-input-danger) > input:focus + .omrs-input-label {
+	color: var(--omrs-color-interaction);
+}
+
+.omrs-input-underlined:not(.omrs-input-danger) > input:focus,
+.omrs-input-filled:not(.omrs-input-danger) > input:focus {
+	border-color: var(--omrs-color-interaction);
+}
+
+.omrs-input-underlined:not(.omrs-input-danger) > input:focus ~ svg,
+.omrs-input-filled:not(.omrs-input-danger) > input:focus ~ svg {
+	fill: var(--omrs-color-ink-high-contrast);
+}
+
+.serts{
+    position: relative;
+    top: 32px;
+    left: 291px;
+    transform: translate(-50%,-50%);
+    transition: all 1s;
+    width: 50px;
+    height: 50px;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid white;
+    padding: 5px;
+}
+
+.searchbar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;;
+    height: 42.5px;
+    line-height: 30px;
+    outline: 0;
+    border: 0;
+    display: none;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 20px;
+}
+
+#searchicon{
+    box-sizing: border-box;
+    padding: 10px;
+    width: 42.5px;
+    height: 42.5px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    color: #07051a;
+    text-align: center;
+    font-size: 1.2em;
+    transition: all 1s;
+}
+
+.serts:hover,
+.serts:valid{
+    width: 200px;
+    cursor: pointer;
+}
+
+.serts:hover input,
+.serts:valid input{
+    display: block;
+}
+
+.serts:hover #searchicon,
+.serts:valid #searchicon{
+    background: #07051a;
+    color: white;
+}
+.popup-container {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 9999;
+  }
+  
+  .popup {
+    width: 635px;
+    height: 418px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 20px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 312px;
+  }
+  
+  .payment-form {
+	display: none;
+	margin-top: 10px;
+  }
+
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  .close-button:hover{
+	color: rgb(181, 21, 21);
+	transition: 0.3s ease-in-out;
+  }
+  .ok-button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 34px;
+    width: 69px;
+    font-size: 20px;
+    border: none;
+	cursor: pointer;
+  }
+.ok-button:hover{
+	background-color: skyblue;
+	transition: 0.3s ease-in-out;
+}
+  .form__label {
+	font-family: 'Roboto', sans-serif;
+	font-size: 1.2rem;
+	margin-left: 2rem;
+	margin-top: 0.7rem;
+	display: block;
+	transition: all 0.3s;
+	transform: translateY(0rem);
+  }
+  
+  .form__input {
+	font-family: 'Roboto', sans-serif;
+	color: #333;
+	font-size: 1.2rem;
+	  margin: 0 auto;
+	padding: 1.5rem 2rem;
+	border-radius: 0.2rem;
+	background-color: rgb(255, 255, 255);
+	border: none;
+	width: 90%;
+	display: block;
+	border-bottom: 0.3rem solid transparent;
+	transition: all 0.3s;
+  }
+  
+  .form__input:placeholder-shown + .form__label {
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transform: translateY(-4rem);
+	transform: translateY(-4rem);
+  }
+
+  .wrapperzz {
+	display: flex;
+    height: 100px;
+    width: 400px;
+    justify-content: space-between;
+    border-radius: 5px;
+    padding: 20px 15px;
+    flex-direction: row;
+  }
+  
+  .wrapperzz .option {
+	background: #fff;
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	margin: 0 10px;
+	border-radius: 5px;
+	cursor: pointer;
+	padding: 0 10px;
+	border: 2px solid lightgrey;
+	transition: all 0.3s ease;
+  }
+  
+  .wrapperzz .option .dot {
+	height: 20px;
+	width: 20px;
+	background: #d9d9d9;
+	border-radius: 50%;
+	position: relative;
+  }
+  
+  .wrapperzz .option .dot::before {
+	position: absolute;
+	content: "";
+	top: 4px;
+	left: 4px;
+	width: 12px;
+	height: 12px;
+	background: #0069d9;
+	border-radius: 50%;
+	opacity: 0;
+	transform: scale(1.5);
+	transition: all 0.3s ease;
+  }
+  
+  input[type="radio"] {
+	display: none;
+  }
+  
+  #option-1:checked ~ .option-1,
+  #option-2:checked ~ .option-2,
+  #option-3:checked ~ .option-3,
+  #option-4:checked ~ .option-4,
+  #option-5:checked ~ .option-5 {
+	border-color: #0069d9;
+	background: #0069d9;
+  }
+  
+  #option-1:checked ~ .option-1 .dot,
+  #option-2:checked ~ .option-2 .dot,
+  #option-3:checked ~ .option-3 .dot,
+  #option-4:checked ~ .option-4 .dot,
+  #option-5:checked ~ .option-5 .dot {
+	background: #fff;
+  }
+  
+  #option-1:checked ~ .option-1 .dot::before,
+  #option-2:checked ~ .option-2 .dot::before,
+  #option-3:checked ~ .option-3 .dot::before,
+  #option-4:checked ~ .option-4 .dot::before,
+  #option-5:checked ~ .option-5 .dot::before {
+	opacity: 1;
+	transform: scale(1);
+  }
+  
+  .wrapperzz .option span {
+	font-size: 20px;
+	color: #808080;
+  }
+  
+  #option-1:checked ~ .option-1 span,
+  #option-2:checked ~ .option-2 span,
+  #option-3:checked ~ .option-3 span,
+  #option-4:checked ~ .option-4 span,
+  #option-5:checked ~ .option-5 span {
+	color: #fff;
+  }
+  h4{
+	font-size: 30px;
+  }
+
+  .mode-payment{
+    border: none;
+    cursor: pointer;
+    height: 46px;
+    width: 144px;
+    font-size: 18px;
+  }
+
+  .mode-payment:hover{
+	background-color: skyblue;
+	transition: 0.3s ease-in-out;
+  }
+
+.addcart{
+	height: 10px;
+	width: 10px;
+	border: none;
+}
+h5{
+	font-size: 20px;
+}
+
+#titlezz {
+	margin: auto;
+	text-align: center;
+}
+
+.large {
+	font-size: 6rem;
+}
+
+.small {
+	font-size: 3rem;
+}
+
+.rise {
+	text-shadow: -0.01em -0.01em 0.01em #000;
+	animation: rise 2s ease-in-out 0.5s forwards;
+}
+@keyframes rise {
+	to {
+		text-shadow: 0em 0.01em #ff5, 0em 0.02em #ff5, 0em 0.02em 0.03em #ff5,
+			-0.01em 0.01em #333, -0.02em 0.02em #333, -0.03em 0.03em #333,
+			-0.04em 0.04em #333, -0.01em -0.01em 0.03em #000, -0.02em -0.02em 0.03em #000,
+			-0.03em -0.03em 0.03em #000;
+		transform: translateY(-0.025em) translateX(0.04em);
+	}
+}
+
+.outline {
+	background-clip: text;
+	color: #ffdd40;
+	animation: outline 1s ease-in-out 1.5s forwards;
+}
+
+@keyframes outline {
+	from {
+		text-shadow: 0em -7em 10em #fff;
+	}
+	to {
+		text-shadow: 0 0.02em #fff, 0.02em 0 #fff, -0.02em 0 #fff, 0 -0.02em #fff;
+	}
 }
