--- a/css/style.css
+++ b/css/style.css
@@ -234,23 +234,21 @@ header{
 	  margin-left: 20px;
 	}
   
-	.close-btnzz {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		font-size: 20px;
-		color: #fff;
-		cursor: pointer;
-	  }
-	  
-	  .close-btnzz:hover {
-		color: #ff0000; /* Change the color on hover if desired */
-	  }
-	  
-	  
+	.close-btnzx{
+	  position: absolute;
+	  background: url(../close.png)no-repeat;
+	  width: 40px;
+	  height: 40px;
+	  background-size: 25px;
+	  background-position: center;
+	  top: 0;
+	  left: 0;
+	  margin: 25px;
+	  cursor: pointer;
+	}
   
 	.menu-btn{
-	  background: url(menu.png)no-repeat;
+	  background: url(../menu.png)no-repeat;
 	  width: 40px;
 	  height: 40px;
 	  background-size: 30px;
@@ -285,7 +283,81 @@ header{
 	display: flex;
 }
 footer{
+	background-color: #000;
+	height: auto;
+	width: 100vw;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	padding-top: 40px;
+	color: whitesmoke;
+}
+
+.footer-content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 	text-align: center;
+}
+
+.footer-content h3{
+	font-size: 1.8rem;
+	font-weight: 400;
+	text-transform: capitalize;
+	line-height: 3rem;
+}
+
+.footer content p{
+	max-width: 500px;
+	margin: 10px auto;
+	line-height: 28px;
+	font-size: 14px;
+}
+
+.Socials {
+list-style: none;
+display: flex;
+align-items: center;
+justify-content: center;
+margin: 1rem 0 3rem 0;
+}
+
+.Socials li{
+	margin: 0 10px;
+	
+}
+
+.Socials a{
+	text-decoration: none;
+	color: white;
+}
+
+.Socials a i{
+	
+	font-size: 2.1rem;
+	transition: color 0.4s ease-in-out;
+}
+
+.Socials a i:hover i{
+	color: aqua;
+}
+
+.footer-bottom{
+	background-color: #000;
+	width: 100vw;
+	padding: 20px 0;
+	text-align:center;
+}
+
+.footer-bottom p{
+	font-size: 14px;
+	word-spacing: 2px;
+	text-transform: capitalize;
+}
+
+.footer-bottom span{
+	text-transform: uppercase;
+	opacity: 4;
+	font-weight: 200;
 }
 
 .section-title{
@@ -500,7 +572,6 @@ footer{
 	font-size: 30px;
 	font-weight: 300;
   }
-  
   .product .product-card .popup-btn{
 	z-index: 2;
 	color: #fff;
@@ -634,13 +705,74 @@ footer{
 	transition: 0.3s ease-in-out;
   }
   
-  .product .popup-card .info .add-wish{
-	color: #009DD2;
-	font-size: 16px;
-	text-align: center;
-	font-weight: 600;
-	text-transform: uppercase;
+@media (max-width: 900px){
+  .product .popup-card{
+    flex-direction: column;
+    width: 550px;
+    height: auto;
   }
+
+  .product .popup-card .product-img{
+    z-index: 3;
+    width: 100%;
+    height: 200px;
+    transform: translateY(0);
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
+  .product .popup-card .product-img img{
+    left: initial;
+    max-width: 40%;
+  }
+
+  .product .popup-card .info{
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  .product .popup-card .info h2{
+    margin: 20px 5px 5px 5px;
+    font-size: 25px;
+  }
+
+  .product .popup-card .info h2 span{
+    font-size: 10px;
+  }
+
+  .product .popup-card .info p{
+    margin: 5px;
+    font-size: 13px;
+  }
+
+  .product .popup-card .info .price{
+    margin: 5px;
+    font-size: 30px;
+  }
+
+  .product .popup-card .info .add-cart-btn{
+    margin: 5px auto;
+    padding: 5px 40px;
+    font-size: 14px;
+  }
+
+  .product .popup-card .info .add-wish{
+    font-size: 14px;
+  }
+
+  .product .popup-card .close-btn{
+    z-index: 4;
+  }
+  .product{
+	margin-top: 100px;
+  }
+}
+
+
   h1{
 	text-align: center;
     font-size: 45px;
